--- a/UCAS_02/UCAS_02/Base.lproj/Main.storyboard
+++ b/UCAS_02/UCAS_02/Base.lproj/Main.storyboard
@@ -18,15 +18,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <gestureRecognizers/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="faceLineWidth">
                                 <real key="value" value="3"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="ULW-A7-fC4" appends="YES" id="veZ-Jt-X4z"/>
+                        </connections>
                     </view>
+                    <connections>
+                        <outlet property="faceView" destination="8bC-Xf-vdC" id="XBe-qy-Lad"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="ULW-A7-fC4">
+                    <connections>
+                        <action selector="pan:" destination="BYZ-38-t0r" id="oTK-x8-DYA"/>
+                    </connections>
+                </panGestureRecognizer>
             </objects>
         </scene>
     </scenes>
