--- a/UCAS_02/UCAS_02/Base.lproj/Main.storyboard
+++ b/UCAS_02/UCAS_02/Base.lproj/Main.storyboard
@@ -14,7 +14,7 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="UCAS_02" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" customClass="SmilingView" customModule="UCAS_02" customModuleProvider="target">
+                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" customClass="SmileFaceView" customModule="UCAS_02" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -41,7 +41,7 @@
                     </connections>
                 </panGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1606" y="822"/>
+            <point key="canvasLocation" x="1606" y="474"/>
         </scene>
         <!--Split View Controller-->
         <scene sceneID="Kbd-zf-YWn">
@@ -119,13 +119,13 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="STs-Dt-AMP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="497" y="822"/>
+            <point key="canvasLocation" x="462" y="474"/>
         </scene>
         <!--Face Pop View Controller-->
         <scene sceneID="YaE-EW-NQt">
             <objects>
                 <viewController id="2bE-5D-Rdh" customClass="FacePopViewController" customModule="UCAS_02" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="HUY-0Z-gAn" customClass="SmilingView" customModule="UCAS_02" customModuleProvider="target">
+                    <view key="view" contentMode="scaleToFill" id="HUY-0Z-gAn" customClass="SmileFaceView" customModule="UCAS_02" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -135,13 +135,14 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6VH-f3-yTN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2953" y="-189"/>
+            <point key="canvasLocation" x="2495" y="-440"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="dtP-ai-7Fc">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nVc-5s-VCg" sceneMemberID="viewController">
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" id="7md-cC-14n"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ZxU-7E-iuj">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -153,7 +154,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="D0I-m0-N5B" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1607" y="-230"/>
+            <point key="canvasLocation" x="1471" y="-440"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
